@@ -41,7 +41,7 @@ $language_data = array (
     'COMMENT_SINGLE' => array(1 => '//'),
     'COMMENT_MULTI' => array(),
     'COMMENT_REGEXP' => array(
-        2 => "/\w+'/"
+        2 => "/(?<=\)|\]|\w)'/"
         ),
     'CASE_KEYWORDS' => GESHI_CAPS_NO_CHANGE,
     'QUOTEMARKS' => array('"'),
